<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
        <ImageView
            android:id="@+id/RECIEPT_BIN_ICON"
            android:layout_width="@dimen/reciept_icon_width"
            android:layout_height="@dimen/reciept_icon_height"
            android:src="@drawable/icon_app"
            android:contentDescription="@string/reciept_img"
            android:paddingTop="@dimen/padding_large2">
            
        </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/padding_large2">
        
		    <TextView
		        android:id="@+id/RECIEPT_PLACE_NAME"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/place"
		        android:paddingTop="@dimen/padding_large"
		        android:textSize="30dp" />
		
		    <TextView
		        android:id="@+id/RECIEPT_BIN_NAME"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bin_name"
		        android:paddingTop="@dimen/padding_large" />
		
		    <TextView
		        android:id="@+id/RECIEPT_BIN_DESC"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bin_desc" 
		        android:paddingTop="@dimen/padding_large"/>
		
		    <TextView
		        android:id="@+id/RECIEPT_CONTRIBUTOR_NAME"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/person" 
		        android:paddingTop="@dimen/padding_large"/>
    
    </LinearLayout>
    
    

</LinearLayout>