<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/grey_bg"> -->
    
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:fillViewport="true"
  android:background="@drawable/main_bg"
  >   
  
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">   

 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large2"
        android:paddingLeft="@dimen/padding_large">
        
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ADD_BINS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_bin"
            android:background="@drawable/home_btn_shape"
            android:paddingLeft="@dimen/padding_small"
            android:contentDescription="@string/app_name"
            android:onClick="onClickFeature" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingLeft="22dp"/>
      
   </LinearLayout>

    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="60dp"/>
   
   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/VIEW_BINS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_bin"
            android:background="@drawable/home_btn_shape"
            android:contentDescription="@string/app_name" 
            android:onClick="onClickFeature"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingLeft="15dp"/>
 
  </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:padding="@dimen/padding_large"
        
        android:orientation="vertical">
        
        <ImageButton
            android:id="@+id/BIN_RADAR"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_bin_radar" 
            android:background="@drawable/home_btn_shape"
            android:contentDescription="@string/app_name"
            android:onClick="onClickFeature"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radar"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingLeft="105dp"/>

</LinearLayout>


<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_large">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/ABOUT_APP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_abt_app"
            android:background="@drawable/home_btn_shape"
            android:paddingLeft="@dimen/padding_small"
            android:contentDescription="@string/app_name"
            android:onClick="onClickFeature" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingLeft="10dp"/>
      
   </LinearLayout>

    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="60dp"/>
    
   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/SETTINGS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:background="@drawable/home_btn_shape"
            android:contentDescription="@string/app_name" 
            android:onClick="onClickFeature"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingLeft="15dp"/>
 
  </LinearLayout>
  
 </LinearLayout>
</LinearLayout>
</ScrollView>

